src/css/editor-tab.css
.header { 
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 0 10px;
    background-color: #333232;
    font-family: Consolas, "Courier New", monospace;
    color: #fff;
}

.header .header-left {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-grow: 0;

}

.header .header-left i {
    font-size: inherit;
    margin-right: 8px;
    /* 可以根据需要调整间距 */
    cursor: pointer;
}
.header .header-left span {
    font-size: 10px;
    margin-right: 8px;
    /* 可以根据需要调整间距 */
   user-select: none;
}
.header .header-right {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    width: 20%;
    flex-grow: 0;
    margin-left:8px;
}

.header .header-right JKSLibButton {
    width: 20%;
}

.jks-lib {
    font-size: inherit;
    width: 80%;
    margin-right: 8px;
    /* 可以根据需要调整间距 */
    font-family: Consolas, "Courier New", monospace;
    /* 关键部分 */
    white-space: nowrap;
    /* 防止换行 */
    overflow: hidden;
    /* 隐藏超出部分 */
    text-overflow: ellipsis;
    /* 省略号显示超出内容 */
    display: inline-block;
    /* 确保 width 限制生效 */
}


.header-tabs {
    display: flex;
    flex-direction: row;
    width: fit-content;
   
    justify-content: flex-start;
    align-items: center;
    flex-grow: 1;

    white-space: nowrap;
    height: 100%;

    
   
   
}
.header-tabs-item .close{
    opacity: 0;
    
}
.header-tabs-item:hover .close {
    opacity: 1; /* 鼠标悬停时显示 */
  visibility: visible;
    
}
.close:hover{
    background-color: #545454;
    border-radius: 20%; /* 添加圆角 */
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* 添加阴影 */
}
.simplebar-content{
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    flex-grow: 1;
    white-space: nowrap;
}

.simplebar-content-wrapper{
    height: 100% !important;
}
.header-tabs-item {
    height: 100%;
    padding-left: 2%;
    padding-right: 1%;
    font-size: small;
    cursor: pointer;
    white-space: nowrap;
    /* 确保文本不换行 */
    flex-shrink: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    /* 不允许子元素缩小，确保它们保持横向排列 */
}
.Tabselected{
    background-color:#222222;
}
.header-tabs-item-name {
    display: inline-block;
    /* 让span遵循宽度限制 */

    overflow: hidden;
    /* 隐藏超出的文本 */
    white-space: nowrap;
    /* 防止换行 */
    text-overflow: ellipsis;
    /* 省略号显示超出部分 */
    vertical-align: middle;
    /* 保持垂直对齐 */
   margin-right: 2px;
   user-select: none;
   font-size: var(--tab-fontsize);
}

